# cocoa

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  demo.tape  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  test.yml
cocoa/: cli.py  server.py
cocoa/system/: blast.py  build.py  datastore.py  demo.py  detect.py  driver.py  facts.py  htmlmap.py  models.py  protos.py  report.py  stitch.py  topology.py  wiring.py
cocoa/tools/: __init__.py  system_tools.py
commands/: blast.md  demo.md  map.md
docs/: COMPARISON.md  INSTALL.md
scripts/: docker-smoke.sh
skills/blast-radius/: SKILL.md
skills/grounding-claims/: SKILL.md
skills/mapping-a-system/: SKILL.md
skills/using-cocoa/: SKILL.md
test/: test_blast.py  test_build.py  test_cli.py  test_datastore.py  test_demo_e2e.py  test_detect.py  test_driver.py  test_facts.py  test_mcp.py  test_models.py  test_plugin_assets.py  test_protos.py  test_report.py  test_stitch.py  test_topology.py  test_wiring.py
test/fixtures/pysmoke/: app.py  requirements.txt
