[project]
name = "cocoa"
version = "0.1.0"
description = "COCOA (Code Context Agent): precise static system graphs of polyglot codebases for AI agents, powered by CLDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rahul Krishna", email = "i.m.ralk@gmail.com" }]
keywords = ["static-analysis", "mcp", "code-analysis", "call-graph", "cldk"]
dependencies = [
    "cldk>=1.4.0,<2",
    "pydantic>=2.10.6,<3",
    "fastmcp>=2.5.1",
    "mcp>=1.9.1",
    "typer>=0.16.0",
    "networkx>=3.4.2,<4",
    "pyyaml>=6,<7",
    "sqlglot>=26,<27",
]

[dependency-groups]
test = ["pytest>=8.3.5", "pytest-asyncio>=1.0.0", "pytest-cov>=6.1.1"]
dev = ["ipdb>=0.13.13"]

[project.scripts]
cocoa = "cocoa.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: runs a real analyzer backend (deselect with '-m \"not integration\"')",
    "e2e: full Online Boutique demo (network + all analyzers)",
]
addopts = "-m 'not integration and not e2e'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cocoa"]
